test/spec/multi-value/call_indirect.txt
;;; TOOL: run-interp-spec
;;; STDIN_FILE: third_party/testsuite/proposals/multi-value/call_indirect.wast
;;; ARGS*: --enable-multi-value
(;; STDOUT ;;;
out/test/spec/multi-value/call_indirect.wast:302: assert_malformed passed:
  out/test/spec/multi-value/call_indirect/call_indirect.1.wat:1:122: error: unexpected token "param", expected an expr.
  ...indirect (type $sig) (result i32) (param i32)    (i32.const 0) (i32.const ...
                                        ^^^^^
  out/test/spec/multi-value/call_indirect/call_indirect.1.wat:1:166: error: unexpected token ), expected EOF.
  ...irect (type $sig) (result i32) (param i32)    (i32.const 0) (i32.const 0)  ))
                                                                                 ^
out/test/spec/multi-value/call_indirect.wast:314: assert_malformed passed:
  out/test/spec/multi-value/call_indirect/call_indirect.2.wat:1:109: error: unexpected token "type", expected an expr.
  ... i32)  (call_indirect (param i32) (type $sig) (result i32)    (i32.const 0...
                                        ^^^^
  out/test/spec/multi-value/call_indirect/call_indirect.2.wat:1:166: error: unexpected token ), expected EOF.
  ...irect (param i32) (type $sig) (result i32)    (i32.const 0) (i32.const 0)  ))
                                                                                 ^
out/test/spec/multi-value/call_indirect.wast:326: assert_malformed passed:
  out/test/spec/multi-value/call_indirect/call_indirect.3.wat:1:122: error: unexpected token "type", expected an expr.
  ...indirect (param i32) (result i32) (type $sig)    (i32.const 0) (i32.const ...
                                        ^^^^
  out/test/spec/multi-value/call_indirect/call_indirect.3.wat:1:166: error: unexpected token ), expected EOF.
  ...irect (param i32) (result i32) (type $sig)    (i32.const 0) (i32.const 0)  ))
                                                                                 ^
out/test/spec/multi-value/call_indirect.wast:338: assert_malformed passed:
  out/test/spec/multi-value/call_indirect/call_indirect.4.wat:1:110: error: unexpected token "type", expected an expr.
  ...i32)  (call_indirect (result i32) (type $sig) (param i32)    (i32.const 0)...
                                        ^^^^
  out/test/spec/multi-value/call_indirect/call_indirect.4.wat:1:166: error: unexpected token ), expected EOF.
  ...irect (result i32) (type $sig) (param i32)    (i32.const 0) (i32.const 0)  ))
                                                                                 ^
out/test/spec/multi-value/call_indirect.wast:350: assert_malformed passed:
  out/test/spec/multi-value/call_indirect/call_indirect.5.wat:1:110: error: unexpected token "param", expected an expr.
  ...i32)  (call_indirect (result i32) (param i32) (type $sig)    (i32.const 0)...
                                        ^^^^^
  out/test/spec/multi-value/call_indirect/call_indirect.5.wat:1:166: error: unexpected token ), expected EOF.
  ...irect (result i32) (param i32) (type $sig)    (i32.const 0) (i32.const 0)  ))
                                                                                 ^
out/test/spec/multi-value/call_indirect.wast:362: assert_malformed passed:
  out/test/spec/multi-value/call_indirect/call_indirect.6.wat:1:67: error: unexpected token "param", expected an expr.
  ...t i32)  (call_indirect (result i32) (param i32) (i32.const 0) (i32.const 0)))
                                          ^^^^^
  out/test/spec/multi-value/call_indirect/call_indirect.6.wat:1:106: error: unexpected token ), expected EOF.
  ...t i32)  (call_indirect (result i32) (param i32) (i32.const 0) (i32.const 0)))
                                                                                 ^
out/test/spec/multi-value/call_indirect.wast:372: assert_malformed passed:
  out/test/spec/multi-value/call_indirect/call_indirect.7.wat:1:46: error: unexpected token $x, expected ).
  ...e 0 anyfunc)(func (call_indirect (param $x i32) (i32.const 0) (i32.const 0)))
                                             ^^
  out/test/spec/multi-value/call_indirect/call_indirect.7.wat:1:82: error: unexpected token ), expected EOF.
  ...e 0 anyfunc)(func (call_indirect (param $x i32) (i32.const 0) (i32.const 0)))
                                                                                 ^
out/test/spec/multi-value/call_indirect.wast:379: assert_malformed passed:
  out/test/spec/multi-value/call_indirect/call_indirect.8.wat:1:57: error: expected 0 results, got 1
  ...0 anyfunc)(func (result i32)  (call_indirect (type $sig) (result i32) (i32...
                                    ^^^^^^^^^^^^^
out/test/spec/multi-value/call_indirect.wast:389: assert_malformed passed:
  out/test/spec/multi-value/call_indirect/call_indirect.9.wat:1:82: error: expected 1 arguments, got 0
  ...0 anyfunc)(func (result i32)  (call_indirect (type $sig) (result i32) (i32...
                                    ^^^^^^^^^^^^^
out/test/spec/multi-value/call_indirect.wast:399: assert_malformed passed:
  out/test/spec/multi-value/call_indirect/call_indirect.10.wat:1:69: error: expected 1 results, got 0
  ...i32)))(table 0 anyfunc)(func  (call_indirect (type $sig) (param i32) (i32....
                                    ^^^^^^^^^^^^^
out/test/spec/multi-value/call_indirect.wast:409: assert_malformed passed:
  out/test/spec/multi-value/call_indirect/call_indirect.11.wat:1:86: error: expected 2 arguments, got 1
  ...0 anyfunc)(func (result i32)  (call_indirect (type $sig) (param i32) (resu...
                                    ^^^^^^^^^^^^^
out/test/spec/multi-value/call_indirect.wast:424: assert_invalid passed:
  error: found call_indirect operator, but no table
  000001c: error: OnCallIndirectExpr callback failed
out/test/spec/multi-value/call_indirect.wast:432: assert_invalid passed:
  error: type mismatch in i32.eqz, expected [i32] but got []
  0000023: error: OnConvertExpr callback failed
out/test/spec/multi-value/call_indirect.wast:440: assert_invalid passed:
  error: type mismatch in i32.eqz, expected [i32] but got [i64]
  0000027: error: OnConvertExpr callback failed
out/test/spec/multi-value/call_indirect.wast:449: assert_invalid passed:
  error: type mismatch in call_indirect, expected [i32] but got []
  0000026: error: OnCallIndirectExpr callback failed
out/test/spec/multi-value/call_indirect.wast:457: assert_invalid passed:
  error: type mismatch in call_indirect, expected [f64, i32] but got []
  0000027: error: OnCallIndirectExpr callback failed
out/test/spec/multi-value/call_indirect.wast:465: assert_invalid passed:
  error: type mismatch in function, expected [] but got [i32]
  0000025: error: EndFunctionBody callback failed
out/test/spec/multi-value/call_indirect.wast:473: assert_invalid passed:
  error: type mismatch in function, expected [] but got [f64, i32]
  000002e: error: EndFunctionBody callback failed
out/test/spec/multi-value/call_indirect.wast:484: assert_invalid passed:
  error: type mismatch in call_indirect, expected [i32] but got []
  0000027: error: OnCallIndirectExpr callback failed
out/test/spec/multi-value/call_indirect.wast:492: assert_invalid passed:
  error: type mismatch in call_indirect, expected [i32] but got [... i64]
  0000028: error: OnCallIndirectExpr callback failed
out/test/spec/multi-value/call_indirect.wast:501: assert_invalid passed:
  error: type mismatch in call_indirect, expected [i32, i32] but got [i32]
  000002a: error: OnCallIndirectExpr callback failed
out/test/spec/multi-value/call_indirect.wast:511: assert_invalid passed:
  error: type mismatch in call_indirect, expected [i32, i32] but got [i32]
  000002a: error: OnCallIndirectExpr callback failed
out/test/spec/multi-value/call_indirect.wast:521: assert_invalid passed:
  error: type mismatch in call_indirect, expected [i32, f64] but got [f64, i32]
  0000032: error: OnCallIndirectExpr callback failed
out/test/spec/multi-value/call_indirect.wast:531: assert_invalid passed:
  error: type mismatch in call_indirect, expected [f64, i32] but got [i32, f64]
  0000032: error: OnCallIndirectExpr callback failed
out/test/spec/multi-value/call_indirect.wast:545: assert_invalid passed:
  0000021: error: invalid call_indirect signature index
out/test/spec/multi-value/call_indirect.wast:552: assert_invalid passed:
  0000025: error: invalid call_indirect signature index
out/test/spec/multi-value/call_indirect.wast:563: assert_invalid passed:
  error: invalid func_index: 0 (max 0)
  0000018: error: OnElemSegmentElemExpr_RefFunc callback failed
79/79 tests passed.
;;; STDOUT ;;)
